// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Classificationpage /> functional tests Should display modal 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
        <div
          class="modal"
        >
          <section
            class="modal-window"
          >
            <div
              class="modal-header"
            >
              Classques 1
            </div>
            <div
              class="modal-body"
            >
              <div
                class="classification-info"
              >
                <p>
                  information description goes here
                </p>
              </div>
            </div>
            <div
              class="modal-footer"
            >
              <button>
                Close
              </button>
            </div>
          </section>
        </div>
        <form>
          <label
            for="classques-0"
          >
            Classques 0
             
          </label>
          <select
            id="classques-0"
            name="classques-0"
            required=""
            title="Classques 0"
          >
            <option
              disabled=""
              value=""
            >
              Select an option
            </option>
          </select>
          <label
            for="classques-1"
          >
            Classques 1
             
            <a
              role="more-info-button"
            >
              <i
                class="fa"
              />
            </a>
          </label>
          <select
            id="classques-1"
            name="classques-1"
            required=""
            title="Classques 1"
          >
            <option
              disabled=""
              value=""
            >
              Select an option
            </option>
          </select>
          <label
            for="classques-2"
          >
            Classques 2
             
            <a
              role="more-info-button"
            >
              <i
                class="fa"
              />
            </a>
          </label>
          <select
            id="classques-2"
            name="classques-2"
            required=""
            title="Classques 2"
          >
            <option
              disabled=""
              value=""
            >
              Select an option
            </option>
          </select>
          <input
            type="submit"
            value="Submit"
          />
        </form>
      </div>
    </div>
  </body>,
  "container": <div>
    <div>
      <div
        class="modal"
      >
        <section
          class="modal-window"
        >
          <div
            class="modal-header"
          >
            Classques 1
          </div>
          <div
            class="modal-body"
          >
            <div
              class="classification-info"
            >
              <p>
                information description goes here
              </p>
            </div>
          </div>
          <div
            class="modal-footer"
          >
            <button>
              Close
            </button>
          </div>
        </section>
      </div>
      <form>
        <label
          for="classques-0"
        >
          Classques 0
           
        </label>
        <select
          id="classques-0"
          name="classques-0"
          required=""
          title="Classques 0"
        >
          <option
            disabled=""
            value=""
          >
            Select an option
          </option>
        </select>
        <label
          for="classques-1"
        >
          Classques 1
           
          <a
            role="more-info-button"
          >
            <i
              class="fa"
            />
          </a>
        </label>
        <select
          id="classques-1"
          name="classques-1"
          required=""
          title="Classques 1"
        >
          <option
            disabled=""
            value=""
          >
            Select an option
          </option>
        </select>
        <label
          for="classques-2"
        >
          Classques 2
           
          <a
            role="more-info-button"
          >
            <i
              class="fa"
            />
          </a>
        </label>
        <select
          id="classques-2"
          name="classques-2"
          required=""
          title="Classques 2"
        >
          <option
            disabled=""
            value=""
          >
            Select an option
          </option>
        </select>
        <input
          type="submit"
          value="Submit"
        />
      </form>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`<Classificationpage /> functional tests Should display modal 2`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
        <form>
          <label
            for="classques-0"
          >
            Classques 0
             
          </label>
          <select
            id="classques-0"
            name="classques-0"
            required=""
            title="Classques 0"
          >
            <option
              disabled=""
              value=""
            >
              Select an option
            </option>
          </select>
          <label
            for="classques-1"
          >
            Classques 1
             
            <a
              role="more-info-button"
            >
              <i
                class="fa"
              />
            </a>
          </label>
          <select
            id="classques-1"
            name="classques-1"
            required=""
            title="Classques 1"
          >
            <option
              disabled=""
              value=""
            >
              Select an option
            </option>
          </select>
          <label
            for="classques-2"
          >
            Classques 2
             
            <a
              role="more-info-button"
            >
              <i
                class="fa"
              />
            </a>
          </label>
          <select
            id="classques-2"
            name="classques-2"
            required=""
            title="Classques 2"
          >
            <option
              disabled=""
              value=""
            >
              Select an option
            </option>
          </select>
          <input
            type="submit"
            value="Submit"
          />
        </form>
      </div>
    </div>
  </body>,
  "container": <div>
    <div>
      <form>
        <label
          for="classques-0"
        >
          Classques 0
           
        </label>
        <select
          id="classques-0"
          name="classques-0"
          required=""
          title="Classques 0"
        >
          <option
            disabled=""
            value=""
          >
            Select an option
          </option>
        </select>
        <label
          for="classques-1"
        >
          Classques 1
           
          <a
            role="more-info-button"
          >
            <i
              class="fa"
            />
          </a>
        </label>
        <select
          id="classques-1"
          name="classques-1"
          required=""
          title="Classques 1"
        >
          <option
            disabled=""
            value=""
          >
            Select an option
          </option>
        </select>
        <label
          for="classques-2"
        >
          Classques 2
           
          <a
            role="more-info-button"
          >
            <i
              class="fa"
            />
          </a>
        </label>
        <select
          id="classques-2"
          name="classques-2"
          required=""
          title="Classques 2"
        >
          <option
            disabled=""
            value=""
          >
            Select an option
          </option>
        </select>
        <input
          type="submit"
          value="Submit"
        />
      </form>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`<Classificationpage /> functional tests Should display modal 3`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
        <div
          class="modal"
        >
          <section
            class="modal-window"
          >
            <div
              class="modal-header"
            >
              Classques 1
            </div>
            <div
              class="modal-body"
            >
              <div
                class="classification-info"
              >
                <p>
                  information description goes here
                </p>
              </div>
            </div>
            <div
              class="modal-footer"
            >
              <button>
                Close
              </button>
            </div>
          </section>
        </div>
        <form>
          <label
            for="classques-0"
          >
            Classques 0
             
          </label>
          <select
            id="classques-0"
            name="classques-0"
            required=""
            title="Classques 0"
          >
            <option
              disabled=""
              value=""
            >
              Select an option
            </option>
          </select>
          <label
            for="classques-1"
          >
            Classques 1
             
            <a
              role="more-info-button"
            >
              <i
                class="fa"
              />
            </a>
          </label>
          <select
            id="classques-1"
            name="classques-1"
            required=""
            title="Classques 1"
          >
            <option
              disabled=""
              value=""
            >
              Select an option
            </option>
          </select>
          <label
            for="classques-2"
          >
            Classques 2
             
            <a
              role="more-info-button"
            >
              <i
                class="fa"
              />
            </a>
          </label>
          <select
            id="classques-2"
            name="classques-2"
            required=""
            title="Classques 2"
          >
            <option
              disabled=""
              value=""
            >
              Select an option
            </option>
          </select>
          <input
            type="submit"
            value="Submit"
          />
        </form>
      </div>
    </div>
  </body>,
  "container": <div>
    <div>
      <div
        class="modal"
      >
        <section
          class="modal-window"
        >
          <div
            class="modal-header"
          >
            Classques 1
          </div>
          <div
            class="modal-body"
          >
            <div
              class="classification-info"
            >
              <p>
                information description goes here
              </p>
            </div>
          </div>
          <div
            class="modal-footer"
          >
            <button>
              Close
            </button>
          </div>
        </section>
      </div>
      <form>
        <label
          for="classques-0"
        >
          Classques 0
           
        </label>
        <select
          id="classques-0"
          name="classques-0"
          required=""
          title="Classques 0"
        >
          <option
            disabled=""
            value=""
          >
            Select an option
          </option>
        </select>
        <label
          for="classques-1"
        >
          Classques 1
           
          <a
            role="more-info-button"
          >
            <i
              class="fa"
            />
          </a>
        </label>
        <select
          id="classques-1"
          name="classques-1"
          required=""
          title="Classques 1"
        >
          <option
            disabled=""
            value=""
          >
            Select an option
          </option>
        </select>
        <label
          for="classques-2"
        >
          Classques 2
           
          <a
            role="more-info-button"
          >
            <i
              class="fa"
            />
          </a>
        </label>
        <select
          id="classques-2"
          name="classques-2"
          required=""
          title="Classques 2"
        >
          <option
            disabled=""
            value=""
          >
            Select an option
          </option>
        </select>
        <input
          type="submit"
          value="Submit"
        />
      </form>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
